tests/expectations/compiler/slice/slice_invalid_range_fail.out
Error [ETYC0372174]: Invalid slice range: start index `5` is greater than end index `3`.
    --> compiler-test:5:16
     |
   5 |         return a[5..3];
     |                ^^^^^^^
